src/test/deca/syntax/invalid/created/miscellaneous/comment_2.deca
// Description :
//    juste un commentaire, verifie que le lexer ne cherche pas la plus grande chaine possible
//
// Resultats :
//		Syntaxe error


/* un commentaire */ */
